--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<app.runtime>4.4.0-20230123</app.runtime>
-		<mule.maven.plugin.version>3.8.1</mule.maven.plugin.version>
+		<mule.maven.plugin.version>3.7.1</mule.maven.plugin.version>
 	</properties>
 
 	<build>
@@ -27,11 +27,7 @@
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>	
+				<version>3.7.1</version>	
 				<extensions>true</extensions>
 				<configuration>
 				<cloudHubDeployment>
@@ -44,7 +40,7 @@
 					<workerType>Micro</workerType>
 					<workers>1</workers>
 					<objectStoreV2>true</objectStoreV2>
-					<region> us-west-2 </region>
+					
 				</cloudHubDeployment>
 				</configuration>
 			</plugin>
