--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
 				<cloudHubDeployment>
 					<uri>https://anypoint.mulesoft.com/</uri>
 					<muleVersion>4.4.0</muleVersion>
-					<username>${username}</username>
-					<password>${password}</password>
+					<username>michaelraza01</username>
+					<password>Welcome007!!!</password>
 					<applicationName>weather-app</applicationName>
 					<environment>Sandbox</environment>
 					<workerType>Micro</workerType>
